infra/k8s-prod/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: www.findhotel.site
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: findhotel-srv
                port:
                  number: 3333
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: findhotel-srv
                port:
                  number: 4200
